--- a/bower.json
+++ b/bower.json
@@ -3,18 +3,20 @@
   "version": "0.0.1",
   "main": "src/d3-timeline.js",
   "ignore": [
-      "examples",
-      "lib",
-      ".bowerrc",
-      ".gitignore",
-      ".git",
-      ".jshintrc",
-      "bower.json",
-      "gruntfile.js",
-      "package.json",
-      "README.md"
+    "examples",
+    "lib",
+    ".bowerrc",
+    ".gitignore",
+    ".git",
+    ".jshintrc",
+    "bower.json",
+    "gruntfile.js",
+    "package.json",
+    "README.md"
   ],
   "dependencies": {
-    "d3": ">=3.4.3"
+    "d3": "~3.5.3",
+    "jquery": "~2.1.3",
+    "d3-timeline": "~0.0.3"
   }
 }
